do not use fixed modal on small screens

--- a/_sass/_07_layout.scss
+++ b/_sass/_07_layout.scss
@@ -355,6 +355,12 @@ body.video cite { color: #fff; }
   }
 }
 
+@media #{$medium-up} {
+  .reveal-modal, .reveal-modal-bg {
+    position: fixed;
+  }
+}
+
 /* CSS-Classes to add margin at top or bottom
 ------------------------------------------------------------------- */
 
